@@ -1,0 +1,7 @@
+<div>
+ <gettext>Your signature to use when composing with the HTML editor (if empty, the text signature will be used):</gettext>
+</div>
+
+<div class="fixed">
+ <textarea id="signature_html" name="signature_html" rows="4" cols="80" class="fixed"></textarea>
+</div>
